# update-pypi-deps

./: Cargo.toml  LICENSE  README.md  default.nix  flake.nix
.github/workflows/: cd.yml  ci.yml
src/: lib.rs  main.rs
src/pypi/: mod.rs  response.rs  tests.rs
tests/: integration.rs
tests/files/: fauxmo_response.json  keyring_response.json
