[package]
name = "update-pypi-deps"
version = "0.1.0"
authors = ["Nathan Henrie <nate@n8henrie.com>"]
readme = "README.md"
license = "MIT"
edition = "2021"
description = "Parse pypi dependencies from pyproject.toml and output the latest versions"
repository = "https://github.com/Nathan Henrie/update-pypi-deps"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.194", features = ["derive"] }
thiserror = "1"
tokio = { version = "1.35.1", features = ["full"] }
toml = { version = "0.8.8", features = ["preserve_order"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }

[dev-dependencies]
assert_cmd = "2"
