[package]
name = "update-pypi-deps"
version = "0.1.0"
authors = ["Nathan Henrie <nate@n8henrie.com>"]
readme = "README.md"
license = "MIT"
edition = "2021"
description = "Parse pypi dependencies from pyproject.toml and output the latest versions"
repository = "https://github.com/Nathan Henrie/update-pypi-deps"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.116"
thiserror = "1"
tokio = { version = "1.35.1", features = ["full"] }
toml = "0.8.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }
url = { version = "2.5.0", features = ["serde"] }
